Set correct host within docker

--- a/server/api/WebApi/appsettings.json
+++ b/server/api/WebApi/appsettings.json
@@ -6,8 +6,7 @@
         }
     },
     "DbSettings": {
-        // "Host": "host.docker.internal",
-        "Host": "localhost",
+        "Host": "host.docker.internal",
         "Port": 3306,
         "Name": "trello_clone",
         "User": "best_team",
