--- a/server/api/WebApi/appsettings.json
+++ b/server/api/WebApi/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "DbSettings": {
-        "Host": "host.docker.internal",
+        "Host": "localhost",
         "Port": 3306,
         "Name": "trello_clone",
         "User": "best_team",
